--- a/src/todo/wwwroot/index.html
+++ b/src/todo/wwwroot/index.html
@@ -29,7 +29,7 @@
 
     <script src="lib/angular/angular.js"></script>
     <script src="app/app.js"></script>
-    <script src="app/todo.controller.js"></script>
+    <script src="app/todo.controller.js?v=2"></script>
     <script src="app/todo.service.js"></script>
 </body>
 </html>
